# frag-method-on-ASE

./: .gitignore  CMakeLists.txt  compile.sh  run.sh
source/: extract-traj.py  main.py
source/calculators/: __init__.py  extract_nb.py  force_debug.py  mm_calculator.py  prepare_mm.py  qm_calculator.py  qmmm.py  tblite_calculator.py  xtb_calculator.py
source/calculators/cxx/: CMakeLists.txt  compile.sh
source/calculators/cxx/eegmfcc_solver/: eegmfcc_solver.cpp  eegmfcc_solver.h
source/calculators/cxx/mace_solver/: CMakeLists.txt  mace_solver.cpp  mace_solver.h
source/cxx/: CMakeLists.txt  compile.sh
source/cxx/eegmfcc_solver/: CMakeLists.txt  eegmfcc_solver.cpp  eegmfcc_solver.h
source/cxx/mace_solver/: CMakeLists.txt  mace_solver.cpp  mace_solver.h
source/cxx/nonbonded_solver/: CMakeLists.txt  nonbonded_solver.cpp  nonbonded_solver.h
source/cxx/openmm_solver/: CMakeLists.txt  openmm_solver.cpp  openmm_solver.h
